local/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toto
  labels:
    app: toto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toto
  template:
    metadata:
      labels:
        app: toto
    spec:
      containers:
      - name: toto
        image: briandwamba/simulator:latest
        ports:
        - containerPort: 3000
        env:
        - name: DB_HOST
          value: "1.254.114.114"
        - name: DB_PORT
          value: "5432"
        - name: DB_USER
          value: nemesis
        - name: DB_PASS
          value: nemesis
        - name: DB_NAME
          value: nemesis_dev
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: toto
  name: toto
spec:
  type: NodePort
  selector:
    app: toto
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
