local/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: test
  ports:
    - port: 3000
      targetPort: 3000
